# revyl-cli

./: Makefile  README.md  device-targets.json  openapi.json
cmd/revyl/: atlas.go  auth.go  build.go  build_progress.go  build_remote.go  build_remote_test.go  cancel.go  configless_test.go  create.go  create_test.go  dev.go  dev_cockpit.go  dev_cockpit_test.go  dev_remote.go  dev_remote_test.go  dev_test.go  device.go  doctor.go  init.go  main.go  mcp.go  module.go  module_handlers.go  report.go  run.go  run_inspect.go  script.go  session_convert.go  session_convert_test.go  skill.go  skill_test.go  sync.go  sync_test.go  test.go  tests.go  yaml_validation.go  yaml_validation_test.go
docs/: COMMANDS.md  CONFIGURATION.md  README.md  atlas.md  getting-started.md
docs/integrations/: expo-dashboard.md  mcp-setup.md  skills.md
docs/tests/: creating-tests.md  first-test.md  syncing-tests.md
e2e/: cli_local_test.go
examples/yaml-tests/: README.md
internal/analytics/: command.go  command_test.go
internal/api/: client.go  client_test.go  generated.go  yaml_validation_test.go
internal/config/: project.go  yaml_parse_test.go
internal/device/: start.go  start_test.go
internal/devicetargets/: targets_generated.go
internal/execution/: create.go  create_test.go  run.go
internal/hotreload/: devserver.go  diagnostics.go  health.go  health_test.go  manager.go  manager_test.go  (+3 more)
npm/: package.json
python/: pyproject.toml
python/revyl/: _binary.py  _device_targets.py
python/tests/: test_binary_integrity.py
scripts/: generate-types.sh  go-test-summary.sh
(+34 files in other folders)
