[project]
name = "revyl"
version = "0.1.27"
description = "Revyl CLI - AI-powered mobile app testing"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Revyl", email = "support@revyl.ai" }
]
keywords = ["revyl", "mobile", "testing", "e2e", "automation", "ios", "android"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
sdk = []

[project.urls]
Homepage = "https://revyl.com"
Documentation = "https://docs.revyl.ai"
Repository = "https://github.com/RevylAI/revyl-cli"

[project.scripts]
revyl = "revyl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["revyl"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
